--- a/docs/config.json
+++ b/docs/config.json
@@ -1,1 +1,1 @@
-{"productVersion":"","productWebUrl":".","productId":"a","stage":"release","downloadTitle":"Get AngelScript","keymaps":{},"searchMaxHits":75,"productName":"AngelScript"}
+{"productVersion":"","productWebUrl":".","productId":"AngelScript","stage":"release","downloadTitle":"Get AngelScript","keymaps":{},"searchMaxHits":75,"productName":"AngelScript"}
